# lab_macnumm_control

./: CMakeLists.txt  README.md  keyboard_control.py  main.py  main_keyboard.py  main_pythoncan.py  main_pythoncan_cmd.py  manuiplate.ps1  mecanum_controller.py  motor_controller.py  package.xml  python_can_controller.py  run_cmd_control.sh  setup.py  setup_socketcan.py
archieve/: command_interface.py  keyboard_control.py  main.py  main_keyboard.py  main_pythoncan.py  main_pythoncan_cmd.py  run_keyboard_control_command.sh
config/: default_params.yaml
launch/: command_interface.launch  full_system.launch  keyboard_control.launch  mecanum_controller.launch
mecanum_control/: command_interface.py  keyboard_control.py  main_linux.py  mecanum_controller.py  trajectory_planner.py  zlg_can_controller.py
mecanum_control/run/: main_keyboard.py
msg/: MecanumCommand.msg  MecanumStatus.msg
scripts/: keyboard_control_node.py  mecanum_controller_node.py  python_can_controller.py
src/: command_interface_node.py  keyboard_control_node.py  mecanum_controller.py  mecanum_controller_node.py
src/mecanum_control/: __init__.py  mecanum_controller.py  python_can_controller.py
test/: test_simple_can.py
tests/: can_device_scanner.py  test_can_usb_device.py
