<?xml version="1.0"?>
<package format="2">
  <name>mecanum_control</name>
  <version>0.1.0</version>
  <description>The mecanum_control package for controlling mecanum wheeled vehicles using CAN communication</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <author email="your_email@example.com">Your Name</author>
  
  <license>BSD</license>
  
  <url type="website">http://wiki.ros.org/mecanum_control</url>
  <url type="repository">https://github.com/yourusername/mecanum_control</url>
  <url type="bugtracker">https://github.com/yourusername/mecanum_control/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>python-can</build_depend> -->
  
  
  <!-- 构建导出依赖 -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>python-can</build_export_depend> -->
  
  <!-- 运行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-can</exec_depend>
  
  <export>
    <!-- 其他工具可以使用的元数据 -->
  </export>
</package>
